# DistributedMessageQueue

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: debug.yml
src/utils/: MmapFile.cpp  MmapFile.h
test/: CMakeLists.txt  MmapFileTest.cpp
